One-page version

--- a/index.html
+++ b/index.html
@@ -15,19 +15,22 @@ $('#s1').cycle('fade');
 </head>
 <body>
 
-<div id="topBg"></div>
-<div id="borderBg"></div>
+<div id="topBg">
+<img src="wood4.jpg" />
+</div>
 
 <div id="mainContent">
 <div id="logo"></div>
 <div id="menu">
 <ul>
-<li><a href="#" class="accueil">ACCUEIL</a></li>
+<li><a href="#" class="accueil">ACCUEIL <span>Un aper&ccedil;u</span></a></li>
 <li><a href="#" class="services">SERVICES</a></li>
 <li><a href="#" class="contact">CONTACT</a></li>
 </ul>
 </div>
 
+<div id="centerBg">
+</div>
 <div id="center">
 		<div id="s1" class="pics">
 				  <img src="photos/slideshow/charpente.jpg" />
@@ -38,23 +41,13 @@ $('#s1').cycle('fade');
 		</div>
 		
 		<h1>Bienvenue chez Jipi !</h1>
-	
-		<div class="text">
+
 		<p>Haec igitur Epicuri non probo, inquam. De cetero vellem equidem aut ipse doctrinis fuisset instructior est enim, quod tibi ita videri necesse est, non satis politus iis artibus, quas qui tenent, eruditi appellantur aut ne deterruisset alios a studiis. quamquam te quidem video minime esse deterritum.</p>
 		<p>Cuius acerbitati uxor grave accesserat incentivum, germanitate Augusti turgida supra modum, quam Hannibaliano regi fratris filio antehac Constantinus iunxerat pater, Megaera quaedam mortalis, inflammatrix saevientis adsidua, humani cruoris avida nihil mitius quam maritus; qui paulatim eruditiores facti processu temporis ad nocendum per clandestinos versutosque rumigerulos conpertis leviter addere quaedam male suetos falsa et placentia sibi discentes, adfectati regni vel artium nefandarum calumnias insontibus adfligebant.</p>
 		<p>Huic Arabia est conserta, ex alio latere Nabataeis contigua; opima varietate conmerciorum castrisque oppleta validis et castellis, quae ad repellendos gentium vicinarum excursus sollicitudo pervigil veterum per oportunos saltus erexit et cautos. haec quoque civitates habet inter oppida quaedam ingentes Bostram et Gerasam atque Philadelphiam murorum firmitate cautissimas. hanc provinciae inposito nomine rectoreque adtributo obtemperare legibus nostris Traianus conpulit imperator incolarum tumore saepe contunso cum glorioso marte Mediam urgeret et Parthos.</p>
-		</div>
-</div>
-
 
 </div>
 
-<div id="footer">
-<div id="footLeft"><p>jprobert@jprobert.be</p></div>
-<div id="footRight">
-<p>Rue du coquelet, 2</p>
-<p>5000 Gembloux</p>
-</div>
 </div>
 
 
