--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ $('#s1').cycle('fade');
 <body>
 
 <div id="topBg">
-<img src="wood4.jpg" />
+<img src="wood5.jpg" />
 </div>
 
 <div id="mainContent">
@@ -24,8 +24,8 @@ $('#s1').cycle('fade');
 <div id="menu">
 <ul>
 <li><a href="#" class="accueil">ACCUEIL <span>Un aper&ccedil;u</span></a></li>
-<li><a href="#" class="services">SERVICES</a></li>
-<li><a href="#" class="contact">CONTACT</a></li>
+<li><a href="#" class="services">SERVICES <span>Ce que nous pouvons faire pour vous</span></a></li>
+<li><a href="#" class="contact">CONTACT <span>Comment nous contacter</span></a></li>
 </ul>
 </div>
 
