--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@ $('#s1').cycle('fade');
 <div id="logo"></div>
 <div id="menu">
 <ul>
-<li><a href="#" class="accueil">ACCUEIL <span>Un aper&ccedil;u</span></a></li>
-<li><a href="#" class="services">SERVICES <span>Ce que nous pouvons faire pour vous</span></a></li>
-<li><a href="#" class="contact">CONTACT <span>Comment nous contacter</span></a></li>
+<li><a href="index.html" class="accueil">ACCUEIL <span>Un aper&ccedil;u</span></a></li>
+<li><a href="services.html" class="services">SERVICES <span>Ce que nous pouvons faire pour vous</span></a></li>
+<li><a href="contact.html" class="contact">CONTACT <span>Comment nous contacter</span></a></li>
 </ul>
 </div>
 
