Contact form completed

--- a/contact.html
+++ b/contact.html
@@ -45,10 +45,30 @@
 		
 		<p>Vous pouvez &eacute;galement nous contacter via le formulaire suivant.  Nous vous recontacterons dans les plus brefs d&eacute;lais.</p>
 		
-		<form id="contact" action="envoi de mail">
-		<p></p>
+		<form id="contact">
+		<p>
+			<label for="nom">Nom* :</label>
+			<input type="text" id="nom" />
+		</p>
+		
+		<p>
+			<label for="mail">Email :</label>
+			<input type="text" id="mail" />
+		</p>
+		
+		<p>
+			<label for="tel">T&eacute;l* :</label>
+			<input type="text" id="mail" />
+		</p>
+		
+		<p>
+			<label for="message">Votre message* :</label>		
+			<textarea rows="7" cols="30" id="message"></textarea>
+		</p>
+		
+		<p>
+			<input type="submit" value="Envoyer" class="submit"></input>
 		</form>
-
 
 </div>
 
