--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@ $('#s1').cycle('fade');
 <div id="centerBg">
 </div>
 <div id="center">
+
+		<!--
 		<div id="s1" class="pics">
 				  <img src="photos/slideshow/charpente.jpg" />
 				  <img src="photos/slideshow/coffrage.jpg" />
@@ -39,6 +41,12 @@ $('#s1').cycle('fade');
 				  <img src="photos/slideshow/reparationavant.jpg" />
 				  <img src="photos/slideshow/restauration.jpg" />
 		</div>
+		-->
+		
+		<div class="pics">
+			<img src="photos/worker.jpg" />
+		</div>
+		
 		
 		<h1>Bienvenue chez Jipi !</h1>
 
