--- a/services.html
+++ b/services.html
@@ -4,6 +4,10 @@
 <title>Menuiserie Robert - Services</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <link href="css/style.css" rel="stylesheet" type="text/css" />
+<link rel="stylesheet" href="css/lightbox.css" type="text/css" media="screen" />
+<script type="text/javascript" src="js/prototype.js"></script>
+<script type="text/javascript" src="js/scriptaculous.js?load=effects,builder"></script>
+<script type="text/javascript" src="js/lightbox.js"></script>
 </head>
 <body>
 
@@ -26,6 +30,13 @@
 <div id="center">
 
 		<h1>Services</h1>
+		
+		<div id="rightGallery">
+		<a href="photos/slideshow/charpente.jpg" rel="lightbox" title="my caption"><img src="photos/thumbs/charpente.jpg" /></a>
+		<a href="photos/slideshow/coffrage.jpg" rel="lightbox" title="my caption"><img src="photos/thumbs/coffrage.jpg" /></a>
+		<a href="photos/slideshow/realisation.jpg" rel="lightbox" title="my caption"><img src="photos/thumbs/realisation.jpg" /></a>
+		<a href="photos/slideshow/reparationavant.jpg" rel="lightbox" title="my caption"><img src="photos/thumbs/reparationavant.jpg" /></a>
+		</div>
 		
 </div>
 
