images dans services.html lightbox

--- a/services.html
+++ b/services.html
@@ -28,15 +28,15 @@
 <div id="centerBg">
 </div>
 <div id="center">
-
-		<h1>Services</h1>
 		
 		<div id="rightGallery">
-		<a href="photos/slideshow/charpente.jpg" rel="lightbox" title="my caption"><img src="photos/thumbs/charpente.jpg" /></a>
-		<a href="photos/slideshow/coffrage.jpg" rel="lightbox" title="my caption"><img src="photos/thumbs/coffrage.jpg" /></a>
-		<a href="photos/slideshow/realisation.jpg" rel="lightbox" title="my caption"><img src="photos/thumbs/realisation.jpg" /></a>
-		<a href="photos/slideshow/reparationavant.jpg" rel="lightbox" title="my caption"><img src="photos/thumbs/reparationavant.jpg" /></a>
+		<a href="photos/slideshow/charpente.jpg" rel="lightbox" title="Une charpente"><img src="photos/thumbs/charpente.jpg" /></a>
+		<a href="photos/slideshow/coffrage.jpg" rel="lightbox" title="Un coffrage"><img src="photos/thumbs/coffrage.jpg" /></a>
+		<a href="photos/slideshow/realisation.jpg" rel="lightbox" title="Une r&eacute;alisation"><img src="photos/thumbs/realisation.jpg" /></a>
+		<a href="photos/slideshow/reparationavant.jpg" rel="lightbox" title="Avant une r&eacute;paration"><img src="photos/thumbs/reparationavant.jpg" /></a>
 		</div>
+		
+		<h1>Services</h1>
 		
 </div>
 
